--- a/themes/base_files/scss/_tiki-tabs_and_tables.scss
+++ b/themes/base_files/scss/_tiki-tabs_and_tables.scss
@@ -195,6 +195,8 @@ td.url{
 					.form-check-input { margin: 5px 0 0; }
 					.form-check { padding-left: 0; }
 				}
+
+				tfoot tr { display: block; }
 			}
 		}
 	}
